--- a/index.html
+++ b/index.html
@@ -207,16 +207,15 @@
     <section id="projects">
       <p class="section__text__p1">Browse My Recent</p>
       <h1 class="title">Projects</h1>
-      <div class="experience-details-container">
-        <div class="about-containers">
-          <div class="details-container color-container" data-aos="zoom-in" data-aos-once="true" data-aos-delay="120">
+      <div class="project-slider-container" data-aos="fade-up" data-aos-once="true">
+        <div class="project-slider-track">
+          <!-- 6 Projects -->
+          <div class="details-container color-container project-card">
             <div class="article-container">
               <img
                 src="./assets/project-1.png"
                 alt="Project 1"
                 class="project-img"
-                data-aos="zoom-in"
-                data-aos-delay="120"
                 data-speed="0.02"
               />
             </div>
@@ -236,14 +235,12 @@
               </button>
             </div>
           </div>
-          <div class="details-container color-container" data-aos="zoom-in" data-aos-once="true" data-aos-delay="160">
+          <div class="details-container color-container project-card">
             <div class="article-container">
               <img
                 src="./assets/project-2.png"
                 alt="Project 2"
                 class="project-img"
-                data-aos="zoom-in"
-                data-aos-delay="160"
                 data-speed="0.02"
               />
             </div>
@@ -263,18 +260,242 @@
               </button>
             </div>
           </div>
-          <div class="details-container color-container" data-aos="zoom-in" data-aos-once="true" data-aos-delay="200">
+          <div class="details-container color-container project-card">
             <div class="article-container">
               <img
                 src="./assets/project-3.png"
                 alt="Project 3"
                 class="project-img"
-                data-aos="zoom-in"
-                data-aos-delay="200"
                 data-speed="0.02"
               />
             </div>
             <h2 class="skills-sub-title project-title">Project Three</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/'"
+              >
+                Github
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/'"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container project-card">
+            <div class="article-container">
+              <img
+                src="./assets/project-1.png"
+                alt="Project 4"
+                class="project-img"
+                data-speed="0.02"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">Project Four</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/'"
+              >
+                Github
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/'"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container project-card">
+            <div class="article-container">
+              <img
+                src="./assets/project-2.png"
+                alt="Project 5"
+                class="project-img"
+                data-speed="0.02"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">Project Five</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/'"
+              >
+                Github
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/'"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container project-card">
+            <div class="article-container">
+              <img
+                src="./assets/project-3.png"
+                alt="Project 6"
+                class="project-img"
+                data-speed="0.02"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">Project Six</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/'"
+              >
+                Github
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/'"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
+          <!-- Duplicates for Loop -->
+          <div class="details-container color-container project-card">
+            <div class="article-container">
+              <img
+                src="./assets/project-1.png"
+                alt="Project 1"
+                class="project-img"
+                data-speed="0.02"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">Project One</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/'"
+              >
+                Github
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/'"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container project-card">
+            <div class="article-container">
+              <img
+                src="./assets/project-2.png"
+                alt="Project 2"
+                class="project-img"
+                data-speed="0.02"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">Project Two</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/'"
+              >
+                Github
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/'"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container project-card">
+            <div class="article-container">
+              <img
+                src="./assets/project-3.png"
+                alt="Project 3"
+                class="project-img"
+                data-speed="0.02"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">Project Three</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/'"
+              >
+                Github
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/'"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container project-card">
+            <div class="article-container">
+              <img
+                src="./assets/project-1.png"
+                alt="Project 4"
+                class="project-img"
+                data-speed="0.02"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">Project Four</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/'"
+              >
+                Github
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/'"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container project-card">
+            <div class="article-container">
+              <img
+                src="./assets/project-2.png"
+                alt="Project 5"
+                class="project-img"
+                data-speed="0.02"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">Project Five</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/'"
+              >
+                Github
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/'"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container project-card">
+            <div class="article-container">
+              <img
+                src="./assets/project-3.png"
+                alt="Project 6"
+                class="project-img"
+                data-speed="0.02"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">Project Six</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
