--- a/index.html
+++ b/index.html
@@ -207,6 +207,244 @@
     <section id="projects">
       <p class="section__text__p1">Browse My Recent</p>
       <h1 class="title">Projects</h1>
+      
+      <h2 class="skills-sub-title project-category-title">Internship Projects</h2>
+      <div class="project-slider-container" data-aos="fade-up" data-aos-once="true">
+        <div class="project-slider-track">
+          <!-- 6 Projects -->
+          <div class="details-container color-container project-card">
+            <div class="article-container">
+              <img
+                src="./assets/project-1.png"
+                alt="Project 1"
+                class="project-img"
+                data-speed="0.02"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">Project One</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='./project.html?title=Project%20Five'"
+              >
+                Explore
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container project-card">
+            <div class="article-container">
+              <img
+                src="./assets/project-2.png"
+                alt="Project 2"
+                class="project-img"
+                data-speed="0.02"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">Project Two</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='./project.html?title=Project%20Three'"
+              >
+                Explore
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container project-card">
+            <div class="article-container">
+              <img
+                src="./assets/project-3.png"
+                alt="Project 3"
+                class="project-img"
+                data-speed="0.02"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">Project Three</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='./project.html?title=Project%20One'"
+              >
+                Explore
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container project-card">
+            <div class="article-container">
+              <img
+                src="./assets/project-1.png"
+                alt="Project 4"
+                class="project-img"
+                data-speed="0.02"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">Project Four</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='./project.html?title=Project%20Five'"
+              >
+                Explore
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container project-card">
+            <div class="article-container">
+              <img
+                src="./assets/project-2.png"
+                alt="Project 5"
+                class="project-img"
+                data-speed="0.02"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">Project Five</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='./project.html?title=Project%20Three'"
+              >
+                Explore
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container project-card">
+            <div class="article-container">
+              <img
+                src="./assets/project-3.png"
+                alt="Project 6"
+                class="project-img"
+                data-speed="0.02"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">Project Six</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='./project.html?title=Project%20One'"
+              >
+                Explore
+              </button>
+            </div>
+          </div>
+          <!-- Duplicates for Loop -->
+          <div class="details-container color-container project-card">
+            <div class="article-container">
+              <img
+                src="./assets/project-1.png"
+                alt="Project 1"
+                class="project-img"
+                data-speed="0.02"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">Project One</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='./project.html?title=Project%20Two'"
+              >
+                Explore
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container project-card">
+            <div class="article-container">
+              <img
+                src="./assets/project-2.png"
+                alt="Project 2"
+                class="project-img"
+                data-speed="0.02"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">Project Two</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='./project.html?title=Project%20Four'"
+              >
+                Explore
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container project-card">
+            <div class="article-container">
+              <img
+                src="./assets/project-3.png"
+                alt="Project 3"
+                class="project-img"
+                data-speed="0.02"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">Project Three</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='./project.html?title=Project%20Six'"
+              >
+                Explore
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container project-card">
+            <div class="article-container">
+              <img
+                src="./assets/project-1.png"
+                alt="Project 4"
+                class="project-img"
+                data-speed="0.02"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">Project Four</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='./project.html?title=Project%20Two'"
+              >
+                Explore
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container project-card">
+            <div class="article-container">
+              <img
+                src="./assets/project-2.png"
+                alt="Project 5"
+                class="project-img"
+                data-speed="0.02"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">Project Five</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='./project.html?title=Project%20Four'"
+              >
+                Explore
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container project-card">
+            <div class="article-container">
+              <img
+                src="./assets/project-3.png"
+                alt="Project 6"
+                class="project-img"
+                data-speed="0.02"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">Project Six</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='./project.html?title=Project%20Six'"
+              >
+                Explore
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <h2 class="skills-sub-title project-category-title">University Projects</h2>
       <div class="project-slider-container" data-aos="fade-up" data-aos-once="true">
         <div class="project-slider-track">
           <!-- 6 Projects -->
@@ -225,13 +463,7 @@
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
-                Github
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Demo
+                Explore
               </button>
             </div>
           </div>
@@ -250,13 +482,7 @@
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
-                Github
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Demo
+                Explore
               </button>
             </div>
           </div>
@@ -275,13 +501,7 @@
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
-                Github
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Demo
+                Explore
               </button>
             </div>
           </div>
@@ -300,13 +520,7 @@
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
-                Github
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Demo
+                Explore
               </button>
             </div>
           </div>
@@ -325,13 +539,7 @@
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
-                Github
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Demo
+                Explore
               </button>
             </div>
           </div>
@@ -350,169 +558,68 @@
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
-                Github
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Demo
+                Explore
               </button>
             </div>
           </div>
           <!-- Duplicates for Loop -->
           <div class="details-container color-container project-card">
             <div class="article-container">
-              <img
-                src="./assets/project-1.png"
-                alt="Project 1"
-                class="project-img"
-                data-speed="0.02"
-              />
+              <img src="./assets/project-1.png" alt="Project 1" class="project-img" data-speed="0.02" />
             </div>
             <h2 class="skills-sub-title project-title">Project One</h2>
             <div class="btn-container">
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Github
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Demo
-              </button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='./project.html?title=Project%20One'">Explore</button>
             </div>
           </div>
           <div class="details-container color-container project-card">
             <div class="article-container">
-              <img
-                src="./assets/project-2.png"
-                alt="Project 2"
-                class="project-img"
-                data-speed="0.02"
-              />
+              <img src="./assets/project-2.png" alt="Project 2" class="project-img" data-speed="0.02" />
             </div>
             <h2 class="skills-sub-title project-title">Project Two</h2>
             <div class="btn-container">
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Github
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Demo
-              </button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='./project.html?title=Project%20Two'">Explore</button>
             </div>
           </div>
           <div class="details-container color-container project-card">
             <div class="article-container">
-              <img
-                src="./assets/project-3.png"
-                alt="Project 3"
-                class="project-img"
-                data-speed="0.02"
-              />
+              <img src="./assets/project-3.png" alt="Project 3" class="project-img" data-speed="0.02" />
             </div>
             <h2 class="skills-sub-title project-title">Project Three</h2>
             <div class="btn-container">
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Github
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Demo
-              </button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='./project.html?title=Project%20Three'">Explore</button>
             </div>
           </div>
           <div class="details-container color-container project-card">
             <div class="article-container">
-              <img
-                src="./assets/project-1.png"
-                alt="Project 4"
-                class="project-img"
-                data-speed="0.02"
-              />
+              <img src="./assets/project-1.png" alt="Project 4" class="project-img" data-speed="0.02" />
             </div>
             <h2 class="skills-sub-title project-title">Project Four</h2>
             <div class="btn-container">
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Github
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Demo
-              </button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='./project.html?title=Project%20Four'">Explore</button>
             </div>
           </div>
           <div class="details-container color-container project-card">
             <div class="article-container">
-              <img
-                src="./assets/project-2.png"
-                alt="Project 5"
-                class="project-img"
-                data-speed="0.02"
-              />
+              <img src="./assets/project-2.png" alt="Project 5" class="project-img" data-speed="0.02" />
             </div>
             <h2 class="skills-sub-title project-title">Project Five</h2>
             <div class="btn-container">
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Github
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Demo
-              </button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='./project.html?title=Project%20Five'">Explore</button>
             </div>
           </div>
           <div class="details-container color-container project-card">
             <div class="article-container">
-              <img
-                src="./assets/project-3.png"
-                alt="Project 6"
-                class="project-img"
-                data-speed="0.02"
-              />
+              <img src="./assets/project-3.png" alt="Project 6" class="project-img" data-speed="0.02" />
             </div>
             <h2 class="skills-sub-title project-title">Project Six</h2>
             <div class="btn-container">
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Github
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Demo
-              </button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='./project.html?title=Project%20Six'">Explore</button>
             </div>
           </div>
         </div>
       </div>
+
       <img
         src="./assets/arrow.png"
         alt="Arrow icon"
