--- a/project.html
+++ b/project.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
   <body>
-    <nav id="desktop-nav">
+    <nav id="desktop-nav" style="justify-content: flex-start; padding-left: 5%;">
       <ul class="nav-links">
-        <li><a href="index.html" class="nav-button">Back to Home</a></li>
+        <li><a href="index.html" class="nav-button">&larr; Back to Home</a></li>
       </ul>
     </nav>
     
@@ -44,6 +44,12 @@
               onclick="window.open('https://github.com/', '_blank')"
             >
               GitHub
+            </button>
+            <button
+              class="btn btn-color-2"
+              onclick="window.open('#', '_blank')"
+            >
+              Live Demo
             </button>
           </div>
         </div>
